add a job to workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,3 +37,6 @@ jobs:
 workflows:
   capstone-pipeline:
     jobs:
+      - docker-linting
+      - docker-build:
+          requires: [docker-linting]
