--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,13 +25,47 @@ jobs:
           command: docker build -t capstone ./app
       - run:
           name: tag the image
-          command: docker tag capstone $DOCKER_USERNAME/capstone:${CIRCLE_WORKFLOW_ID:0:7}
+          command: docker tag capstone $DOCKER_USERNAME/capstone:latest
       - run:
           name: sign in dockerhub
           command: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run:
           name: publish image
-          command: docker push $DOCKER_USERNAME/capstone:${CIRCLE_WORKFLOW_ID:0:7}
+          command: docker push $DOCKER_USERNAME/capstone:latest
+
+  deploy:
+    docker:
+      - image: cimg/python:3.11.4
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: install tools
+          command: |
+            sudo apt install -y tar gzip curl
+      - kubernetes/install-kubectl
+      - aws-eks/update-kubeconfig-with-authenticator:
+          cluster-name: test
+          aws-region: us-east-1
+          install-kubectl: true
+      - kubernetes/create-or-update-resource:
+          resource-file-path: ./kubernetes/deployment.yml
+          resource-name: deployment/capstone
+          get-rollout-status: true
+          show-kubectl-command: true
+      - kubernetes/create-or-update-resource:
+          resource-file-path: ./kubernetes/aws-auth.yml
+          resource-name: configmap/aws-auth
+      - run:
+          name: Test cluster
+          command: |
+            kubectl get nodes
+            kubectl get deployment
+            kubectl get pod -o wide
+            kubectl get services
+      - run:
+          name: Cleaning up
+          command: docker system prune
 
 
 workflows:
@@ -40,3 +74,5 @@ workflows:
       - docker-linting
       - docker-build:
           requires: [docker-linting]
+      - deploy:
+          requires: [docker-build]
