--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -1,15 +1,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: capstone
+  name: capstone-app
   labels:
-    app: capstone
+    app: capstone-app
 spec:
   progressDeadlineSeconds: 3600
   replicas: 2
   selector:
     matchLabels:
-      app: capstone
+      app: capstone-app
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       labels:
-        app: capstone
+        app: capstone-app
     spec:
       affinity:
         nodeAffinity:
@@ -31,9 +31,9 @@ spec:
                       - amd64
                       - arm64
       containers:
-        - image: jayesd3v/capstone:latest
+        - image: lqtoan20/capstone-devops:v1
           imagePullPolicy: Always
-          name: capstone
+          name: capstone-app
           ports:
             - containerPort: 80
           resources:
@@ -48,13 +48,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: capstone
+  name: capstone-app
   labels:
-    app: capstone
+    app: capstone-app
 spec:
   type: LoadBalancer
   selector:
-    app: capstone
+    app: capstone-app
   ports:
     - port: 80
       targetPort: 80
