--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -31,7 +31,7 @@ spec:
                       - amd64
                       - arm64
       containers:
-        - image: lqtoan20/capstone-devops:v1
+        - image: jayesd3v/capstone:latest
           imagePullPolicy: Always
           name: capstone-app
           ports:
@@ -58,5 +58,4 @@ spec:
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 31000
       protocol: TCP
