--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   aws-eks: circleci/aws-eks@2.2.0
-  kubernetes: circleci/kubernetes@1.2.0
+  kubernetes: circleci/kubernetes@1.3
 
 executors:
   docker:
@@ -40,17 +40,6 @@ jobs:
   deploy:
     docker:
       - image: cimg/python:3.11.4
-    parameters:
-      cluster-name:
-        description: |
-          Name of the EKS cluster
-        type: string
-        default: "test"
-      aws-region:
-        description: |
-          AWS region
-        type: string
-        default: "us-east-1"
     steps:
       - checkout
       - setup_remote_docker
@@ -60,17 +49,14 @@ jobs:
             sudo apt install -y tar gzip curl
       - kubernetes/install-kubectl
       - aws-eks/update-kubeconfig-with-authenticator:
-          cluster-name: << parameters.cluster-name >>
-          aws-region: << parameters.aws-region >>
+          cluster-name: capstone-eks
+          aws-region: us-east-1
           install-kubectl: true
       - kubernetes/create-or-update-resource:
           resource-file-path: ./kubernetes/deployment.yml
           resource-name: deployment/capstone-app
           get-rollout-status: true
           show-kubectl-command: true
-      - kubernetes/create-or-update-resource:
-          resource-file-path: ./kubernetes/aws-auth.yml
-          resource-name: configmap/aws-auth
       - run:
           name: Test cluster
           command: |
